# eudaq-drs4

./: .gitignore  CMakeLists.txt  STARTRUN  VX1742DEFS.hh  crashlog.txt  findBeamInterrupts.py  newinstall  run_log_psimay15.json  vme_init
cmake/: FindDRS.cmake  FindROOT.cmake  FindZestSC1.cmake
conf/: CAEN.conf  CERN.conf  TLU.conf  TUandCAEN.conf  TUtesting.conf  cern.conf  cmspix.conf  cmspixel.conf  converter.conf  converterMM.conf  converter_telescope.conf  converter_waveform_integrals.conf  default.conf  dicke_Anna.conf  dig_ana.conf  drs4.conf  example.cfg  find_diamond_shadow.conf  low_threshold.conf  onlinemonconf.xml  pif.conf  pif_eff.conf  pif_efficiency.conf  pix_ana.conf  pix_dig_ana_tlu.conf  signal.conf  signal_no_drs.conf  tlu-noHandshake.conf  totale_konfiguration.conf
conf/old/: cms_caen.conf  cmspixel_drs4.conf  default.conf  pix_caen_tlu.conf  pix_dig_ana_caen_tlu.conf
data/: crashlog.txt
data/test/: crashlog.txt
etc/analysis_tools/: analyse_runs.py  fft_analysis.py  landau.py
etc/scripts/: KILLRUN.cern  KILLRUN.pif  KILLRUN.psi  STARTRUN.cern  STARTRUN.cern.tlu  STARTRUN.cern.tu  STARTRUN.cms  STARTRUN.cms.home  STARTRUN.cms.test  STARTRUN.drs4  STARTRUN.pif  STARTRUN.psi  STARTRUN.psi.ana  STARTRUN.psi.drs4  STARTRUN.psi.findDiaShadow  STARTRUN.psi.pad  STARTRUN.psi.tlu  STARTRUN.psi.withDig  STARTRUN.psi.withoutDig  StartDataCollector.sh  aliases.txt
gui/include/: euLog.hh  euRun.hh
gui/src/: euRun.cc
gui/ui/: euRun.ui
main/exe/: CMakeLists.txt
main/exe/src/: Converter.cxx  IPHCConverter.cxx  TestLogger.cxx
main/include/eudaq/: CMSPixelHelper.hh  Configuration.hh  DataCollector.hh  DataConverterPlugin.hh  Event.hh  EventSynchronisationBase.hh  (+13 more)
main/lib/: CMakeLists.txt
monitors/onlinemon/: CMakeLists.txt
producers/: CMakeLists.txt
producers/V1730/: CMakeLists.txt
producers/V1730/include/: V1730Producer.hh
producers/V1730/src/: V1730Producer.cxx
producers/V1730/src/versions/: V1730Producer_with_loop.cxx
producers/V1742/: CMakeLists.txt
producers/tu/: CMakeLists.txt  tu.cfg
producers/vx1742/: CMakeLists.txt
producers/vx1742/include/: VX1742DEFS.hh  VX1742Event.hh  VX1742Interface.hh  VX1742Producer.hh
producers/vx1742/src/: VX1742Event.cpp  VX1742Interface.cpp  VX1742Producer.cpp
script/: STARTRUN.cms
(+87 files in other folders)
